# Homework_12

./: README  pyproject.toml
.github/workflows/: python-app.yml
config/: celery.py  settings.py  urls.py
store_app/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
store_app/management/commands/: gen_data.py
store_app/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_author_tag_authorprofile_comment_product_tags.py  0004_alter_product_tags.py  0005_alter_product_category_alter_product_tags.py  0006_product_views.py
store_app/templates/store_app/: about.html  add_product.html  base.html  categories_list.html  delete_product.html  edit_product.html  index.html  menu.html  product_detail.html  product_list.html
store_app/tests/: conftest.py  test_forms.py  test_model.py  test_templates.py  test_views.py
