[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [

 "requests (>=2.32.3,<3.0.0)",


 "black (>=25.1.0,<26.0.0)",


 "gunicorn>=23.0.0",
 "django>=5.2.3",
 "faker>=37.4.0",
 "celery[redis]>=5.5.3",
 "django-celery-results>=2.6.0",
]

[dependency-groups]
test = [
    "beautifulsoup4>=4.13.4",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.1",
]

